<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:id="@+id/comparsion_activity"
    android:focusableInTouchMode="true"
    >

    <ProgressBar
        android:id="@+id/progress_bar_ai_search"
        style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ai_name"
        android:layout_margin="10dp"
        android:textSize="@dimen/text_title"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_expense"
        android:textAlignment="center"/>


    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/search_exp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_tenders"
        android:textAlignment="center"/>

    <android.support.v7.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:id="@+id/search_tenders"/>

    <Button
        android:id="@+id/button_combine_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/combine_icon"
        android:layout_gravity="end"
        />

</LinearLayout>